Rename layouts to reflect page type (i.e. landing)
Put opening body tag in layout with appropriate class for
the background-color used in the page.

Remove any hero banners or carousels from layouts and place
in the page content (in html page files of root folder)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include head.html %}
+  <body id="page-top" class="landing">
   {% include global-nav.html %}
   {% include mega-nav.html %}
-  {% include hero-slider.html %}
   {{ content }}
   {% include footer.html %}
 {% include foot.html %}
