--- a/_layouts/sub-nav-landing.html
+++ b/_layouts/sub-nav-landing.html
@@ -1,6 +1,8 @@
 {% include head.html %}
+  <body id="page-top" class="landing">
   {% include global-nav.html %}
   {% include mega-nav.html %}
+  {% include sub-nav.html %}
   {{ content }}
   {% include footer.html %}
 {% include foot.html %}
