--- a/_layouts/sub-nav.html
+++ b/_layouts/sub-nav.html
@@ -1,7 +1,8 @@
 {% include head.html %}
+  <body id="page-top" class="page">
   {% include global-nav.html %}
   {% include mega-nav.html %}
-  {% include facil-banner.html %}
+  {% include sub-nav.html %}
   {{ content }}
   {% include footer.html %}
 {% include foot.html %}
