--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,8 +1,7 @@
 {% include head.html %}
+  <body id="page-top" class="landing">
   {% include global-nav.html %}
   {% include mega-nav.html %}
-  {% include sub-nav.html %}
-  {% include baseball-slider.html %}
   {{ content }}
   {% include footer.html %}
 {% include foot.html %}
