--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,3 +29,5 @@
 @import "5-pages/baseball/modals";
 /* Facilities page */
 @import "5-pages/facilities/facilities";
+/* Sports facilities */
+@import "5-pages/sports-facilities/sports-facilities";
