Create blue-heading class for general KCC-blue color headings

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -63,3 +63,10 @@ p {
   font-size: 1.2em;
   font-weight: 900;
 }
+
+.blue-heading {
+  color: $primary-blue;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.4em;
+  font-weight: 700;
+}
