Update facilities links and anchored links

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -143,16 +143,16 @@
               <li class="nav-list">
                 <div class="row nav-row facilities-drop-pad">
                   <div class="col-md-3">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center"><strong>Fitness Center</strong></a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center"><strong>Fitness Center</strong></a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center#membership">Membership</a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center#membership">Membership</a>
                   </div>
                   <div class="col-md-3 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center#trainers">Personal Trainers</a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center#trainers">Personal Trainers</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/fitness-center#testimonials">Testimonials</a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/fitness-center#testimonials">Testimonials</a>
                   </div>
                   <div class="col-md-1 d-none d-md-block">
                   </div>
@@ -164,16 +164,16 @@
                     <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities"><strong>Sports Facilities</strong></a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#ryan">Ryan&#160;Activities Center</a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#gym">Ryan&#160;Activities Center</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#baseball">Baseball&#160;Field</a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#baseball-field">Baseball&#160;Field</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#soccer">Soccer&#160;Field</a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#soccer-field">Soccer&#160;Field</a>
                   </div>
                   <div class="col-md-2 d-none d-md-block">
-                    <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/sports-facilities#softball">Softball&#160;Field</a>
+                    <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/sports-facilities#softball-field">Softball&#160;Field</a>
                   </div>
                 </div>
               </li>
