Exclude _header.scss from compiling in main.scss

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -14,7 +14,7 @@
 @import "3-modules/img-hover";
 
 /* Layout items */
-@import "4-layout/header";
+// @import "4-layout/header";
 @import "4-layout/positioning";
 
 /* Page specific styling */
