--- a/assets/scss/3-modules/_img-hover.scss
+++ b/assets/scss/3-modules/_img-hover.scss
@@ -11,17 +11,19 @@
 }
 
 .img-link {
-  position: relative;
+  border-radius: 5px;
+  cursor: pointer;
   display: block;
   max-width: 400px;
   margin: 0 auto;
-  cursor: pointer;
   overflow: hidden;
+  position: relative;
 }
 
 .img-hover {
   background: $primary-blue;
   border-color: $primary-red;
+  border-radius: 5px;
   border-style: solid;
   border-width: 5px;
   height: 100%;
