--- a/_includes/baseball-slider.html
+++ b/_includes/baseball-slider.html
@@ -4,12 +4,24 @@
     <div class="col-md-12 baseballSlider">
       <div>
         <img src="{{page.baseurl}}assets/img/header-bg2.jpg" class="img-fluid slide-img" alt="">
+        <div class="heading-container">
+          <h3 class="sub-heading editable">June 6, 2017 | Baseball</h3>
+          <h3 class="slide-heading editable">2017 NJCAA Division II<br>National Champions</h3>
+        </div>
       </div>
       <div>
         <img src="{{page.baseurl}}assets/img/baseball-hero2.jpg" class="img-fluid slide-img" alt="">
+        <div class="heading-container">
+          <h3 class="sub-heading editable">Date, Year | Baseball</h3>
+          <h3 class="slide-heading editable">Heading line 1</h3>
+        </div>
       </div>
       <div>
         <img src="{{page.baseurl}}assets/img/baseball-hero3.jpg" class="img-fluid slide-img" alt="">
+        <div class="heading-container">
+          <h3 class="sub-heading editable">Date, Year | Baseball</h3>
+          <h3 class="slide-heading editable">Heading line 1<br>Heading line 2</h3>
+        </div>
       </div>
     </div>
   </div>
