Add positioning/style rules for slide headings parent div
Position in front of the slide and add white left-border

--- a/assets/scss/4-layout/_positioning.scss
+++ b/assets/scss/4-layout/_positioning.scss
@@ -7,3 +7,14 @@
 .img-radius {
   border-radius: 5px;
 }
+
+.heading-container {
+  border-left-color: white;
+  border-left-style: solid;
+  border-left-width: 2px;
+  margin-left: 1%;
+  padding-left: 20px;
+  position: absolute;
+  top: 74%;
+  z-index: 4444;
+}
