--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,16 +11,16 @@
         <meta name="yt-api-k" value="AIzaSyDqf_tGL2X636tuTEUjTLcxAdApjc6eiC0" />
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Bootstrap 4 Beta stylesheet CDN link -->
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <!--  Slick.js v1.8.1 stylesheet followed by slick-theme stylesheet  -->
-        <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
-        <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.css"/>
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css"/>
         <!-- Link to Google Font's "Roboto" font -->
-        <link href="http://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
         <!-- Link to Google Font's "Open Sans" font -->
-        <link href="http://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
         <!--  FontAwesome defered script link  -->
-        <script defer src="http://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="{{page.baseurl}}assets/css/main.css">
     </head>
