Updated '_includes/head.html' via CloudCannon

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,5 +22,5 @@
         <!--  FontAwesome defered script link  -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         <!-- Place favicon.ico in the root directory -->
-        <link rel="stylesheet" href="{{page.baseurl}}/assets/css/main.css">
+        <link rel="stylesheet" href="{{page.baseurl}}assets/css/main.css">
     </head>
