Update schedule and YouTube carousel's JS & scss
Connect to FTP

--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -1,76 +1,89 @@
+#wrapper {
+  margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1110px;
+  width: 100%;
+}
+
 #yt_list {
-	height: 290px;
-	top: 0;
-	right: 0;
-	list-style: none;
+ height: 290px;
+ top: 0;
+ right: 0;
+ list-style: none;
+ margin-bottom: 80px;
 }
 .item {
-	background: #fff;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	height: auto;
-	width: 300px;
-	float: left;
-	padding: 15px;
-	margin: 10px;
+ background: #fff;
+ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+ height: auto;
+ width: 300px;
+ float: left;
+ padding: 15px;
+ margin: 10px;
 }
 .item > a > img {
-	width: 100%;
+ width: 100%;
 }
 .item:hover {
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+ box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 .video-details {
-	font-size: 18px;
+ font-size: 18px;
 }
 
 .video-carousel__title {
-  color: #c61f48;
-  font-size: 17px;
-  font-weight: bold;
+	color: #c61f48;
+	font-size: 17px;
+	font-weight: bold;
 }
 
 div#channel_input > input#user_name.error {
-	color: #d33;
-	border-color: #d33;
-	text-decoration: line-through;
-	background: rgba(0, 0, 0, 0.5);
+ color: #d33;
+ border-color: #d33;
+ text-decoration: line-through;
+ background: rgba(0, 0, 0, 0.5);
 }
 div#channel_input > div.info {
-	display: none;
-	width: calc(100% - 2em);
-	font-size: 1em;
-	line-height: 1.2em;
-	background: rgba(0, 0, 0, 0.7);
-	color: #fff;
-	padding: 1em;
-	transition: 225ms;
+ display: none;
+ width: calc(100% - 2em);
+ font-size: 1em;
+ line-height: 1.2em;
+ background: rgba(0, 0, 0, 0.7);
+ color: #fff;
+ padding: 1em;
+ transition: 225ms;
 }
 button#load-more{
-	display: block;
-	margin: .5em auto;
-	pading: .5em;
-	font-size: 2em;
-	border: 1px solid;
-	outline: none;
+ display: block;
+ margin: .5em auto;
+ pading: .5em;
+ font-size: 2em;
+ border: 1px solid;
+ outline: none;
 }
 @media screen and (orientation: portrait) {
-	#yt_player {
-		width: 100%;
-		height: 40vh;
-	}
-	#yt_list {
-		height: 59vh;
-		width: 800px;
-		top: auto;
-		bottom: 0;
-		left: 0;
-	}
-	.item {
-	}
+ #yt_player {
+	 width: 100%;
+	 height: 40vh;
+ }
+ #yt_list {
+	 height: 59vh;
+	 width: 800px;
+	 top: auto;
+	 bottom: 0;
+	 left: 0;
+ }
+ .item {
+ }
 }
 @media screen and (orientation: portrait) and (max-width: 468px) {
-	.item {
-		height: auto;
-		width: calc(100% - 50px);
-	}
+ .item {
+	 height: auto;
+	 width: calc(100% - 50px);
+ }
+}
+
+.yt-button {
+  margin-top: 60px;
 }
