--- a/assets/scss/5-pages/index/_schedule.scss
+++ b/assets/scss/5-pages/index/_schedule.scss
@@ -2,51 +2,54 @@
   margin-bottom: 40px;
 }
 
-.slick.games {
-  width: 98%;
+.games {
+  background-color: white;
+  width: 75%;
   margin: 0 auto;
   display: block;
 }
 
 .slick.slide {
-  background-color: white;
   margin: 10px;
 }
 
-::selection {
-	background: #000;
-	color: #fff;
-}
-
 .schedule-carousel__sport {
-	color: #666673;
+ color: #666673;
   border-bottom: 1px solid #666673;
-	font-weight: bold;
-	font-size: 15px;
-	overflow: hidden;
+ font-weight: bold;
+ font-size: 15px;
+ overflow: hidden;
   text-transform: uppercase;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	max-width: 60%;
+ text-overflow: ellipsis;
+ white-space: nowrap;
+ max-width: 60%;
 }
 
 .schedule-carousel__sport-icon {
   color: #c61f48;
 }
 
-.schedule-carousel__date{
+.schedule-carousel__date-blue{
   background-color: #0f3b63;
   color: #ffffff;
   float: left;
-  height: 120px;
+  height: 100px;
   width: auto;
   Text-align: center;
   margin-right: 10px;
   padding: 5px;
   line-height: 1;
 }
-.schedule-carousel__date.red{
+.schedule-carousel__date-red{
   background-color: #c61f48;
+  color: #ffffff;
+  float: left;
+  height: 100px;
+  width: auto;
+  Text-align: center;
+  margin-right: 10px;
+  padding: 5px;
+  line-height: 1;
 }
 
 .schedule-carousel__date-month{
@@ -54,20 +57,4 @@
 }
 .schedule-carousel__date-day{
   font-size: 25px;
-}
-
-.slick.games .slick-next,
-.slick.games .slick-prev,
-#yt_list .slick-next,
-#yt_list .slick-prev {
-  height: 30px;
-  width: 30px;
-}
-
-.slick.games .slick-next {
-  right: -45px;
-}
-
-.slick.games .slick-prev {
-  left: -45px;
 }
