--- a/_layouts/sub-nav-landing-fb.html
+++ b/_layouts/sub-nav-landing-fb.html
@@ -3,6 +3,7 @@
   {% include facebook-widget.html %}
   {% include global-nav.html %}
   {% include mega-nav.html %}
+  {% include sub-nav.html %}
   {{ content }}
   {% include footer.html %}
 {% include foot.html %}
