Adjust style/layouts for news/social media areas

--- a/assets/scss/0-tools/_vars.scss
+++ b/assets/scss/0-tools/_vars.scss
@@ -40,6 +40,7 @@ $default-bg: #ffffff;        // Background color for non-landing pages
 $footer-bg: #ffffff;         // Footer's background color
 $grey-heading: #666666;      // Grey headings used within page content
 $fa-color: $primary-red;
+$slide-bg: white;            // Background color for the upcoming games slick slides
 
 body.landing {
   background-color: $landing-bg;
