--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -17,3 +17,20 @@
   height: 500px;
   overflow-y: scroll;
 }
+
+.news-feed {
+  background-color: white;
+}
+
+.grey-bg {
+  background-color: #e5e8ec;
+  margin-bottom: 10px;
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+}
+
+.news-social-row {
+  margin-bottom: 40px;
+}
