--- a/assets/scss/5-pages/index/_videos.scss
+++ b/assets/scss/5-pages/index/_videos.scss
@@ -1,5 +1,4 @@
 #wrapper {
-  margin-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
   max-width: 1110px;
@@ -11,7 +10,14 @@
  top: 0;
  right: 0;
  list-style: none;
- margin-bottom: 80px;
+ margin-bottom: 10px;
+}
+#yt_list_bb {
+ height: 290px;
+ top: 0;
+ right: 0;
+ list-style: none;
+ margin-bottom: 10px;
 }
 .item {
  background: #fff;
@@ -74,6 +80,13 @@ button#load-more{
 	 bottom: 0;
 	 left: 0;
  }
+ #yt_list_bb {
+  height: 59vh;
+  width: 800px;
+  top: auto;
+  bottom: 0;
+  left: 0;
+ }
  .item {
  }
 }
@@ -82,8 +95,4 @@ button#load-more{
 	 height: auto;
 	 width: calc(100% - 50px);
  }
-}
-
-.yt-button {
-  margin-top: 60px;
 }
