Uncomment text-size for date and month

--- a/assets/scss/5-pages/index/_schedule.scss
+++ b/assets/scss/5-pages/index/_schedule.scss
@@ -55,8 +55,8 @@
 
 .schedule-carousel__date-month{
   margin-bottom: 0;
-  //font-size: 1em;
+  font-size: 1.1em;
 }
 .schedule-carousel__date-day{
-  //font-size: 2em;
+  font-size: 2em;
 }
