Make news section scrollable for more articles
Allow for scrolling in the news roll-up once there are enough articles
News will not be higher than the static height of the facebook widget (500px)

--- a/assets/scss/5-pages/index/_home.scss
+++ b/assets/scss/5-pages/index/_home.scss
@@ -34,3 +34,13 @@
 .news-social-row {
   margin-bottom: 40px;
 }
+
+.icon-middle {
+  vertical-align: middle;
+}
+
+.news-scroll {
+  margin-right: -15px;
+  max-height: 485px;
+  overflow-y: scroll;
+}
