Create .main-heading class for page heading styles
for headings like "Upcoming Games" and "News"

--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -68,10 +68,20 @@ p {
   color: $fa-color;  // Sets color for FontAwesome icons
 }
 
+.main-heading {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  color: $grey-heading;
+  font-size: 1.4em;
+}
+
 /* Typography for Coaches sections on pages
 =========================================== */
 .coaches-heading {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
   color: $grey-heading;
+  font-size: 1.4em;
 }
 
 .coach-name {
