Updated '_includes/baseball-slider.html' via CloudCannon

--- a/_includes/baseball-slider.html
+++ b/_includes/baseball-slider.html
@@ -3,7 +3,7 @@
   <div class="row slider-row">
     <div class="col-md-12 baseballSlider">
       <div>
-        <img src="{{page.baseurl}}{{page.slides.img}}" class="img-fluid slide-img" alt="">
+        <img src="{{page.baseurl}}{{page.slides.image}}" class="img-fluid slide-img" alt="">
         <div class="heading-container">
           <h3 class="sub-heading editable">June 6, 2017 | Baseball</h3>
           <h3 class="slide-heading editable">2017 NJCAA Division II<br>National Champions</h3>
