Change all img src to uploads/... from assets/ dir

--- a/_includes/hero-slider.html
+++ b/_includes/hero-slider.html
@@ -3,21 +3,21 @@
   <div class="row slider-row">
     <div class="col-md-12 heroSlider">
       <div>
-        <img src="{{page.baseurl}}assets/img/header-bg2.jpg" class="img-fluid slide-img" alt="">
+        <img src="{{page.baseurl}}uploads/header-bg2.jpg" class="img-fluid slide-img" alt="">
         <div class="heading-container">
           <h3 class="sub-heading editable">June 6, 2017 | Baseball</h3>
           <h3 class="slide-heading editable">2017 NJCAA Division II<br>National Champions</h3>
         </div>
       </div>
       <div>
-        <img src="{{page.baseurl}}assets/img/header-bg.jpg" class="img-fluid slide-img" alt="">
+        <img src="{{page.baseurl}}uploads/header-bg.jpg" class="img-fluid slide-img" alt="">
         <div class="heading-container">
           <h3 class="sub-heading editable">Date, Year | Basketball</h3>
           <h3 class="slide-heading editable">Heading line 1<br>Heading line 2</h3>
         </div>
       </div>
       <div>
-        <img src="{{page.baseurl}}assets/img/header-bg3.jpg" class="img-fluid slide-img" alt="">
+        <img src="{{page.baseurl}}uploads/header-bg3.jpg" class="img-fluid slide-img" alt="">
         <div class="heading-container">
           <h3 class="sub-heading editable">Date, Year | Soccer</h3>
           <h3 class="slide-heading editable">Heading line 1</h3>
