Add liquid tags for site and page .title. Add...
favicon link.
Give html tag a lang="en" Atribute/value

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
     <head>
         <!-- Meta -->
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>{{page.title}} - {{site.title}}</title>
+        <meta name="description" content="{{site.description}}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- YouTube API -->
         <meta name="yt-api-k" value="AIzaSyDqf_tGL2X636tuTEUjTLcxAdApjc6eiC0" />
@@ -22,5 +22,8 @@
         <!--  FontAwesome defered script link  -->
         <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
         <!-- Place favicon.ico in the root directory -->
+        <!-- Standard Favicon -->
+        <link rel="icon" type="image/x-icon" href="{{page.baseurl}}favicon.ico" />
+        <!-- Custom CSS Stylesheet -->
         <link rel="stylesheet" href="{{page.baseurl}}assets/css/main.css">
     </head>
