Make Baseball & Basketball links relative w/ liquid

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -21,29 +21,29 @@
                         <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#roster">Roster</a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball#roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/baseball#news">News</a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball#news">News</a>
                       </div>
                     </div>
                   </li>
                   <li class="nav-list">
                     <div class="row nav-row">
                       <div class="col-md-4">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball"><strong>Basketball</strong></a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#roster">Roster</a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball#roster">Roster</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/mbasketball#news">News</a>
+                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball#news">News</a>
                       </div>
                     </div>
                   </li>
