--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-  <body id="page-top" class="landing">
+  <body data-sn="{{ page.sport }}" id="page-top" class="landing">
   {% include facebook-widget.html %}
   {% include global-nav.html %}
   {% include mega-nav.html %}
