Add YAML value for sport in head
(page.sport get pulled into data-sn)

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -6,5 +6,6 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick.min.js"></script>
 <!-- custom compiled and minified javascript -->
 <script src="{{page.baseurl}}assets/js/all.min.js"></script>
+<!-- Close body -->
 </body>
 </html>
