--- a/assets/scss/5-pages/baseball/_coaches.scss
+++ b/assets/scss/5-pages/baseball/_coaches.scss
@@ -7,6 +7,7 @@
   border-style: solid;
   border-color: white;
   border-width: 5px;
+  width: 300px;
 }
 
 .coach-modal-img {
@@ -14,4 +15,5 @@
   border-color: $primary-red;
   border-width: 5px;
   margin-right: 20px;
+  width: 300px;
 }
