Fix minor Megamenu layout adjustments

--- a/_includes/mega-nav.html
+++ b/_includes/mega-nav.html
@@ -12,7 +12,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <div class="container drop-pad">
             <div class="row">
-              <div class="col-md-5">
+              <div class="col-md-6">
                 <ul class="nav flex-column">
                   <h3 class="menu-heading">Men's Sports</h3>
                   <li class="nav-list">
@@ -21,7 +21,7 @@
                         <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball"><strong>Baseball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text schedule-link" href="{{site.baseurl}}/baseball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/baseball#roster">Roster</a>
@@ -37,7 +37,7 @@
                         <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text schedule-link" href="{{site.baseurl}}/mens-basketball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link no-pad dark-text" href="{{site.baseurl}}/mens-basketball#roster">Roster</a>
@@ -53,7 +53,7 @@
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer"><strong>Soccer</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/soccer#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/soccer#roster">Roster</a>
@@ -65,8 +65,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="col-md-2"></div>
-              <div class="col-md-5">
+              <div class="col-md-6">
                 <ul class="nav flex-column">
                   <h3 class="menu-heading">Women's Sports</h3>
                   <li class="nav-list">
@@ -75,7 +74,7 @@
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball"><strong>Basketball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/wbasketball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/wbasketball#roster">Roster</a>
@@ -91,7 +90,7 @@
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball"><strong>Softball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/softball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/softball#roster">Roster</a>
@@ -107,7 +106,7 @@
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball"><strong>Volleyball</strong></a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
-                        <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
+                        <a class="nav-link no-pad dark-text schedule-link" href="http://athletics.kcc.edu/volleyball#schedule">Schedule</a>
                       </div>
                       <div class="col-md-2 d-none d-md-block">
                         <a class="nav-link no-pad dark-text" href="http://athletics.kcc.edu/volleyball#roster">Roster</a>
