--- a/assets/scss/1-base/_typography.scss
+++ b/assets/scss/1-base/_typography.scss
@@ -25,8 +25,14 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-size: 1em;
   font-weight: 400;
-  letter-spacing: 1px;
+  letter-spacing: .06em;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 1080px) {
+  .nav-link {
+    font-size: .9em;
+    }
 }
 
 .footer-heading {
