Remove FontAwesome icons from pages
Comment-out FontAwesome script in head,
Create .svg images to replace FA icons,
Replace all occurences if FA <i> tags with .svg <img> tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,8 +19,8 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
         <!-- Link to Google Font's "Open Sans" font -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-        <!--  FontAwesome defered script link  -->
-        <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+        <!--  FontAwesome defered script link
+        <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>  -->
         <!-- Place favicon.ico in the root directory -->
         <!-- Standard Favicon -->
         <link rel="icon" type="image/x-icon" href="{{page.baseurl}}favicon.ico" />
